# SticksEngine

./: CMakeLists.txt  LICENSE  README.md
Editor/: CMakeLists.txt
Editor/src/: EditorContext.cpp  EditorContext.h  EditorWindow.h  main.cpp
Editor/src/Windows/: HierarchyWindow.cpp  HierarchyWindow.h  InspectorWindow.cpp  InspectorWindow.h  SceneWindow.cpp  SceneWindow.h
Engine/: CMakeLists.txt
Engine/include/SticksEngine/: Behaviour.h  GameObject.h  Scene.h
Engine/include/SticksEngine/Render/: Renderer.h  Shader.h
Engine/src/: GameObject.cpp  Renderer.cpp  STB.cpp  Scene.cpp  Shader.cpp
Game/: CMakeLists.txt
Game/src/: main.cpp
assets/: fragment.glsl  vertex.glsl
src/: CMakeLists.txt
src/include/: Test.h
src/src/: Test.cpp
